--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       setTimeout(() => count--, 5000);
       if (count >= 5) {
         console.log("sticky keys activated");
+        count = 0;
       }
     });
   </script>
